# fractaml

./: .gitignore  README.md  dune-project  fractaml.opam  index.html  package-lock.json  package.json  rescript.json
esy.lock/: index.json
fractaml/lib/: dune
fractaml/test/: dune
src/: Browser.res  Browser.res.js  Main.res  Main.res.js  index.html
